Issue #3144386 by agami4: Horizontal scroll always visible on the landing page (#1866)

--- a/themes/socialbase/components/05-templates/layout/layout.scss
+++ b/themes/socialbase/components/05-templates/layout/layout.scss
@@ -89,6 +89,10 @@
   }
 }
 
+.region--content {
+  position: relative;
+}
+
 .region--content-top,
 .region--content-bottom,
 .region--hero,
